--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -1178,8 +1178,15 @@ section.dctsdk-work-flow {
 section.grey-bar {
   background-color: #f7f7f7;
   margin: 4.375rem 0;
-  padding: 1.125rem 2.75rem 1.5625rem;
+  padding: 1.125rem 0.75rem 1.5625rem;
   border-radius: 10px;
+
+  p {
+    padding: 0 2rem;
+    @media screen and (min-width: 1440px) {
+      padding: 0 2rem 0 0;
+    }
+  }
   @media screen and (min-width: 1440px) {
     max-width: 52.5rem;
     margin: 4.375rem auto;
@@ -1194,7 +1201,7 @@ section.grey-bar {
   }
 
   .slick-dots {
-    bottom: -122px !important;
+    bottom: -90px !important;
   }
 }
 /* grey bar end */
