--- a/source/_sass/slab-animate.scss
+++ b/source/_sass/slab-animate.scss
@@ -47,7 +47,8 @@
           background: url("../assets/img/slab-animate/background_circuit_2x_mobile.png");   
           background-repeat: no-repeat;
           background-position: center center ;
-          background-size: 435px 200px;   
+          //background-size: 435px 200px;  
+          background-size: 537px 200px;
         }      
 
       }
