--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -407,11 +407,23 @@ body {
           &:first-of-type {
             margin: 0 0.35rem 0 0;
           }
+
+          
+          &.step2{
+            @media screen and (min-width: 1440px) {
+              width:4.75rem;
+              padding-left: 0;
+              padding-right: 0;
+              margin-left:10px
+            }
+          }
+
+
           @media screen and (min-width: 1440px) {
             margin: 0.1rem;
             &:first-of-type {
               margin: 0 0.1rem 0 0;
-              min-width: 76px;
+              min-width: 72px;
             }
           }
         }
@@ -740,7 +752,6 @@ section.home-card {
   }
 }
 /* home cards end */
-
 /* Work flow */
 section.dctsdk-work-flow {
   @media screen and (min-width: 768px) {
@@ -1067,7 +1078,7 @@ section.dctsdk-work-flow {
       display: none;
     }
     
-    @media screen and (min-width: 1440px) {
+    @media screen and (min-width: 768px) {
       display: block;
       padding-left:0.0625rem;
 
@@ -1090,6 +1101,7 @@ section.dctsdk-work-flow {
 
     @media screen and (min-width: 1440px) {
       //padding-left: 2rem;
+
     }
 
      .menu-item-info-content{
@@ -1124,12 +1136,7 @@ section.dctsdk-work-flow {
 
   .work-flow-support-mode-mobile.open {
     margin-top: 2.125rem;
-
-    @media screen and (min-width: 1440px) {
-      //padding-left: 2rem;
-      display: block;
-    }
-    
+    display: block;
 
 
     .button-link {
@@ -1229,11 +1236,17 @@ section.customer {
   }
   .slick-track {
     padding: 0 !important;
+
+    img {
+      filter: grayscale(1);
+    }
   }
   .card {
     img {
       width: 100%;
     }
+    
+
   }
 }
 /* customer logos end */
