--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -2,7 +2,8 @@
 <html class="spectrum--medium">
   <head>
     <title>SDK Developers Kit | {{ page.title }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="{{page.meta}}"/>
     <head>
       <meta charset="UTF-8">
       <link rel="stylesheet" href="https://unpkg.com/@adobe/spectrum-css@2.x/dist/vars/spectrum-global.css">
