--- a/source/_includes/code-sample.html
+++ b/source/_includes/code-sample.html
@@ -1219,6 +1219,174 @@ result.saveAs("output/protectPDFOutput.pdf");
   </p>
 <!-- /Embed -->
 
+<!-- Annotations -->
+<p>
+  <div id="annotations-code" class="sdk-embed-wrapper tab-container-annotations spectrum spectrum--darkest">
+    <coral-tabview>
+      <coral-tablist size="S">
+        <coral-tab>HTML</coral-tab>
+      </coral-tablist>
+      <coral-panelstack>
+        <coral-panel>
+          {% prism html %}
+<script type="text/javascript">
+document.addEventListener("adobe_dc_view_sdk.ready", function(){
+var adobeDCView = new AdobeDC.View({clientId: "<YOUR_CLIENT_ID>", divId: "adobe-dc-view"});
+adobeDCView.previewFile({
+content:   {location: {url: "(path to your PDF)/yourfilename.pdf"}},
+metaData: {fileName: "yourfilename.pdf"}
+},
+{showAnnotationTools: true});
+});
+</script>
+          {% endprism %}
+        </coral-panel>
+      </coral-panelstack>
+    </coral-tabview>
+  </div>
+</p>
+<!-- /Annotations -->
+
+<!-- Analytics -->
+<p>
+  <div id="analytics-code"  class="sdk-embed-wrapper tab-container-annotations spectrum spectrum--darkest">
+    <coral-tabview>
+      <coral-tablist size="S">
+        <coral-tab>HTML</coral-tab>
+      </coral-tablist>
+      <coral-panelstack>
+        <coral-panel>
+          {% prism html %}
+<script type="text/javascript">
+adobeDCView.registerCallback(
+/* Type of call back */
+AdobeDC.View.Enum.CallbackType.EVENT_LISTENER,
+/* call back function */
+function(event) {
+console.log(event);
+},
+{ enablePDFAnalytics: true }
+);
+</script>
+          {% endprism %}
+        </coral-panel>
+      </coral-panelstack>
+    </coral-tabview>
+  </div>
+</p>
+<!-- /Analytics -->
+
+<!-- Collaborative -->
+<p>
+  <div id = "collaborative-code" class="sdk-embed-wrapper tab-container-annotations spectrum spectrum--darkest">
+    <coral-tabview>
+      <coral-tablist size="S">
+        <coral-tab>HTML</coral-tab>
+      </coral-tablist>
+      <coral-panelstack>
+        <coral-panel>
+          {% prism html %}
+<script type="text/javascript">
+const profile = {
+userProfile: {
+name: '<name of user>',
+firstName: '<first name>',
+lastName: '<last name>',
+email: '<user email>'
+}
+};
+
+adobeDCView.registerCallback(
+AdobeDC.View.Enum.CallbackType.GET_USER_PROFILE_API,
+function() {
+return new Promise((resolve, reject) => {
+resolve({
+code: AdobeDC.View.Enum.ApiResponseCode.SUCCESS,
+data: profile
+});
+}); 
+}
+);
+</script>
+          {% endprism %}
+        </coral-panel>
+      </coral-panelstack>
+    </coral-tabview>
+  </div>
+</p>
+<!-- /Collaborative -->
+
+
+<!-- Save Controls-->
+<p>
+  <div id="Save-code" class="sdk-embed-wrapper tab-container-annotations spectrum spectrum--darkest">
+    <coral-tabview>
+      <coral-tablist size="S">
+        <coral-tab>HTML</coral-tab>
+      </coral-tablist>
+      <coral-panelstack>
+        <coral-panel>
+          {% prism html %}
+<script type="text/javascript">
+const saveOptions = {
+autoSaveFrequency: <Number, default=0>,
+enableFocusPolling: <Boolean, default=false>,
+showSaveButton: <Boolean, default=true>
+};
+
+adobeDCView.registerCallback(
+AdobeDC.View.Enum.CallbackType.SAVE_API,
+function(metadata, content, options) {...},
+saveOptions
+);
+</script>
+          {% endprism %}
+        </coral-panel>
+      </coral-panelstack>
+    </coral-tabview>
+  </div>
+</p>
+<!-- /Save COntrols-->
+
+<!-- Menu Tools Options -->
+<p>
+  <div id="tools" class="sdk-embed-wrapper tab-container-annotations spectrum spectrum--darkest">
+    <coral-tabview>
+      <coral-tablist size="S">
+        <coral-tab>HTML</coral-tab>
+      </coral-tablist>
+      <coral-panelstack>
+        <coral-panel>
+          {% prism html %}
+<script type="text/javascript">
+<div id="adobe-dc-view"></div>
+<script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+<script type="text/javascript">
+document.addEventListener("adobe_dc_view_sdk.ready", function () {
+var adobeDCView = new AdobeDC.View({clientId: "<YOUR_CLIENT_ID>", divId: "adobe-dc-view"});
+adobeDCView.previewFile({
+content:{location: {url: "https://documentcloud.adobe.com/view-sdk-demo/PDFs/Bodea Brochure.pdf"}},
+metaData:{fileName: "Bodea Brochure.pdf"}
+}, {"showLeftHandPanel":true, "showPageControls":false});
+});
+</script>
+</script>
+          {% endprism %}
+        </coral-panel>
+      </coral-panelstack>
+    </coral-tabview>
+  </div>
+</p>
+<!-- /Menu Tools Options -->
+
+<!--  -->
+<!--  -->
+
+<!--  -->
+<!--  -->
+
+<!--  -->
+<!--  -->
 
 
 
