--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -134,7 +134,7 @@
           $('.card-slider-container').slick({
             dots: false,
             mobileFirst : true,
-            infinite: false,
+            infinite: true,
             autoplay: true,
             speed: 300,
             slidesToShow: 3,
