--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -145,10 +145,7 @@ body {
 }
 
 .slick-dots {
-  bottom: -1rem !important;
-  @media screen and (min-width: 768px) {
-    bottom: -1.25rem !important;
-  }
+  bottom: 0.25rem !important;
 
   li {
     margin: 0 -2px !important;
@@ -209,12 +206,12 @@ body {
     margin: 0 auto;
     max-width: 20.25rem;
     @media screen and (min-width: 768px) {
-      margin: 0 auto 1.5rem;
-      max-width: 19.25rem;
+      margin: 0 auto;
+      max-width: 24.5rem;
     }
     @media screen and (min-width: 1440px) {
       margin: 0 auto 4.5rem;
-      max-width: 72.75rem;
+      max-width: 63.5rem;
 
       h2 {
         font-size: 1.375rem;
@@ -688,17 +685,20 @@ section.home-card {
     background: $white 0% 0% no-repeat padding-box;
     box-shadow: 0 3px 26px #00000010;
     border-radius: 10px;
-    margin: 0 0 1.5rem;
-    min-height: 22rem;
-    @media screen and (min-width: 768px) {
+    margin: 0 1.25rem 1.5rem;
+    min-height: 24rem;
+    width: 17.75rem !important;
+    @media screen and (min-width: 768px) and (max-width: 1439px) {
+      text-align: center;
       min-height: 24rem;
+      width: 21.875rem !important;
     }
     @media screen and (min-width: 1440px) {
-      min-height: 21rem;
+      min-height: 23.5rem;
+      width: 18.125rem !important;
     }
     padding: 2.25rem 2rem 1.875rem;
     position: relative;
-    /*width: 17.75rem !important;*/
     h2 {
       text-align: center;
     }
@@ -736,14 +736,6 @@ section.home-card {
           }
         }
       }
-    }
-    @media screen and (min-width: 768px) {
-      text-align: center;
-      margin: 0 0.75rem;
-      width: 17.75rem !important;
-    }
-    @media screen and (min-width: 1440px) {
-      width: 21.75rem !important;
     }
   }
   @media screen and (min-width: 768px) and (max-width: 1439px) {
