FIxed 4 prioty on issues

--- a/source/_sass/slab-animate.scss
+++ b/source/_sass/slab-animate.scss
@@ -48,8 +48,10 @@
           background-repeat: no-repeat;
           background-position: center center ;
           //background-size: 435px 200px;  
-          background-size: 537px 200px;
-        }      
+          background-size: 415px 200px;
+        }   
+        
+        //Need to handle landscape for small devices here
 
       }
 
