--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -340,17 +340,12 @@ body {
       counter-increment: get-started-counter;
       margin-bottom: 2rem;
       position: relative;
-      //padding-left: 2em;
       @media screen and (min-width: 1440px) {
         display: inline-block;
         margin: 0;
         width: 33%;
         padding: 0 1rem;
         vertical-align: top;
-      }
-
-      @media screen and (min-width: 768px) {
-        text-align: center;
       }
     }
 
@@ -689,16 +684,14 @@ section.home-card {
     background: $white 0% 0% no-repeat padding-box;
     box-shadow: 0 3px 26px #00000010;
     border-radius: 10px;
-    //#GN margin: 0 1.25rem 1.5rem;
-    margin: 0 0rem 1.5rem;
+    margin: 0 1.25rem 1.5rem;
+    //margin: 0 0rem 1.5rem;
     min-height: 24rem;
     width: 17.75rem !important;
     @media screen and (min-width: 768px) and (max-width: 1439px) {
       text-align: center;
       min-height: 24rem;
       width: 21.875rem !important;
-
-      margin: 0 1.25rem 1.5rem;
     }
     @media screen and (min-width: 1440px) {
       min-height: 23.5rem;
