--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -119,9 +119,28 @@
                 }
               },
               {
+                breakpoint: 640,
+                settings: {
+                  slidesToShow: 1,
+                  centerMode: true,
+                  slidesToScroll: 1,
+                  dots: true
+                }
+              },
+              {
+                breakpoint: 414,
+                settings: {
+                  slidesToShow: 1,
+                  centerMode: true,
+                  slidesToScroll: 1,
+                  dots: true
+                }
+              },
+              {
                 breakpoint: 0,
                 settings: {
                   slidesToShow: 1,
+                  centerMode: true,
                   slidesToScroll: 1,
                   dots: true
                 }
