--- a/source/_sass/_subnav.scss
+++ b/source/_sass/_subnav.scss
@@ -177,6 +177,15 @@
         @media screen and (min-width: 1440px){
           display: none;
         }
+
+        /*Ipad pro */
+        @media only screen 
+        and (min-width: 1024px) 
+        and (max-height: 1366px) 
+        and (orientation: portrait) 
+        and (-webkit-min-device-pixel-ratio: 1.5) {
+          display: none;
+        }
       }      
 
       .sub-nav-menu-item {
