--- a/source/_includes/subnav.html
+++ b/source/_includes/subnav.html
@@ -28,7 +28,7 @@
     
       <li class="sub-nav-menu-item no-hover">
           <div class="sub-nav-menu-label">
-             <a class="sub-nav-get-started-button" href="#">Get Started</a>
+             <a class="sub-nav-get-started-button" href="https://www.adobe.com/go/dcsdks_credentials">Get Started</a>
           </div>
       </li>
   </ul>
