renamed pages, add 17px font to usecase h4

--- a/source/_includes/subnav.html
+++ b/source/_includes/subnav.html
@@ -15,11 +15,11 @@
     </li>
 
       <li class="sub-nav-menu-item {% if page.active == 'embed-sdk' %} active{% endif %}">          
-          <a rel="canonical" class="sub-nav-menu-label" href="embed-sdk.html">PDF Embed API</a>
+          <a rel="canonical" class="sub-nav-menu-label" href="pdf-embed.html">PDF Embed API</a>
       </li>        
       
       <li class="sub-nav-menu-item {% if page.active == 'tools-sdk' %} active{% endif %}">
-        <a rel="canonical" class="sub-nav-menu-label" href="tools-sdk.html">PDF Tools API</a>        
+        <a rel="canonical" class="sub-nav-menu-label" href="pdf-tools.html">PDF Tools API</a>        
       </li>      
         
       <li class="sub-nav-menu-item  {% if page.active == 'documentation' %} active{% endif %}">          
