incorporate new working top nav, and Chris Haff code sample file

--- a/source/_includes/topnav.html
+++ b/source/_includes/topnav.html
@@ -1,39 +1,52 @@
-<!--nav class="top">
-  <ul>
-    <li class="logo"><a href="/">Adobe I/O</a></h1></li>
-    <li><a href="/apis">APIs</a></li>
-    <li><a href="/authentication">Authentication</a></li>
-    <li><a href="/open">Open Source</a></li>
-    <li><a href="blog">Blog</a></li>
-  </ul>
-</nav-->
+<header class="udp-nav-header">
+  <nav class="udp-topNav">
+  
+      <a class="main-nav-logo" href="/">
+          <span class="main-nav-logo-text">Adobe I/O</span>
+      </a>
+      <div class="main-nav-wrapper">
+          <button class="main-nav-hamburger">
+              <span class="main-nav-hamburger-box">
+                  <span class="main-nav-hamburger-inner"></span>
+              </span>
+          </button>
+          <ul class="main-nav-items">
+              <li class="main-nav-menu-item">
+                      
+                      <a class="main-nav-menu-label" href="/apis.html">APIs</a>
+              </li>
+              
+          
+              <li class="main-nav-menu-item">
+                      
+                      <a class="main-nav-menu-label" href="/authentication.html">Authentication</a>
+              </li>
+              
+          
+              <li class="main-nav-menu-item">
+                      
+                      <a class="main-nav-menu-label" href="/open.html">Open Source</a>
+              </li>
+              
+          
+              <li class="main-nav-menu-item">
+                      
+                      <a class="main-nav-menu-label" href="/blog.html">Blog</a>
+              </li>
+              <li class="main-nav-menu-label sub-nav-menu-buttons">
+                  <a href="https://console.adobe.io/" title="Console" class="spectrum-Button spectrum-Button--cta">
+                  Console
+              </a>
+              </li>
+          </ul>
+      </div>
+      
+      <div id="signin" class="signin-wrapper">
+
+<div class="signin-component signin-component-wrapper"><span>Sign in</span></div>
+<div><span class="signin-component-username"></span>
+</div>
 
 
-<header>
-  <nav class="top">
-    <a class="logo" href="/">
-      <span>Adobe I/O</span>
-    </a>
-    <div class="wrapper">
-      <button class="main-nav-hamburger">
-        <span class="main-nav-hamburger-box">
-          <span class="main-nav-hamburger-inner"></span>
-        </span>
-      </button>
-      <ul>
-        <li>
-          <a href="/apis.html">APIs</a>
-        </li>
-        <li>
-          <a href="/authentication.html">Authentication</a>
-        </li>
-        <li>
-          <a href="/open.html">Open Source</a>
-        </li>
-        <li>
-          <a href="/blog.html">Blog</a>
-        </li>
-      </ul>
-    </div>
   </nav>
 </header>
