--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -21,6 +21,10 @@
       <link rel="stylesheet" href="stylesheets/topnav.css">
       <link rel="stylesheet" href="stylesheets/prism-adobe.css">
 
+      <!-- Top main nav support -->
+      <link rel="stylesheet" href="https://www.adobe.io/etc.clientlibs/dexter/clientlibs/base/theme.css" type="text/css">
+      <link rel="stylesheet" href="https://www.adobe.io/etc.clientlibs/udp/clientlibs/base/theme.css" type="text/css">
+
       <link rel="stylesheet" href="stylesheets/main.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/slick/slick.css"/>
       <link rel="stylesheet" type="text/css" href="stylesheets/slick/slick-theme.css"/>
@@ -95,7 +99,8 @@
           $('.card-slider-container-home').slick({
             dots: false,
             mobileFirst : true,
-            infinite: false,
+            infinite: true,
+            autoplay: true,
             speed: 300,
             slidesToShow: 3,
             slidesToScroll: 3,
