--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -95,7 +95,8 @@
           $('.card-slider-container-home').slick({
             dots: false,
             mobileFirst : true,
-            infinite: false,
+            infinite: true,
+            autoplay: true,
             speed: 300,
             slidesToShow: 3,
             slidesToScroll: 3,
