--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -247,7 +247,7 @@ body {
       height: 100px;
       margin: 0 auto;
 
-      
+
       .embed-icon-1{
         width:73.5px;
         height:80.38px;
@@ -259,7 +259,7 @@ body {
         width: 86.7px;
         height:68.3px;
         margin:0px;
-       
+
         vertical-align:middle;
       }
 
@@ -544,7 +544,7 @@ body {
       }
 
       @media screen and (min-width: 768px) {
-         font-size: 1rem;        
+         font-size: 1rem;
       }
 
     }
@@ -1228,10 +1228,9 @@ section.grey-bar {
   padding: 1.125rem 0.75rem 1.5625rem;
   border-radius: 10px;
   @media screen and (max-width: 767px) {
-    .slick-track {
-      width: calc(17.75rem * 10) !important;
-      height: 32vh; 
-    }
+    //.slick-track {
+    //  width: calc(17.75rem * 10) !important;
+  //  }
 
     .slick-list {
       padding: 0 !important;
